First recipe done

--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <br>
+    <img src="images/main.jpg" alt="main image">
+    <br>
+    <h2><u>Top 3 recipes for Odin Project</u></h2>
+    <ol>
+        <li><a href="classic_chicken_vesuvio.html">Classi chicken Vesuvio</a></li>
+        <li><a href="classic_chicken_vesuvio.html">Classiv classic_chicken_vesuvio</a></li>
+        <li><a href="classic_chicken_vesuvio.html">Classiv classic_chicken_vesuvio</a></li>
+    </ol>
 </body>
 </html>
